<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Seven Wonders</string>
	<string name="voice_command">play a skylight1 game</string>	
	<string name="StartEgypt">Enter</string>
	<string name="playAgain">Play Again</string>
	<string name="playNextLevel">Next Level</string>
	<string name="yourCollectedSpellCount">Number of spells collected:</string>
	<string name="yourRemainingTimeSeconds">Remaining Time:</string>
	<string name="yourScore">Your Score</string>
	<string name="postToFacebook">Facebook</string>
	<string name="wonGame">Won Game</string>
	<string name="postToTwitter">Tweet Score</string>
	<string name="postSuccess">Score successfully sent.</string>
	<string name="postScoreMessage">My score in Seven Wonders:</string>
	<string name="choose_a_level">CHOOSE A LEVEL</string>
	<string name="about">About Seven Wonders</string>
	<string name="aboutText1">Seven Wonders\nVersion </string>
	<string name="visitWebsite">Visit the Seven Wonders Website</string>
	<string name="aboutText2">\n(c) 2011 Skylight1</string>
	<string name="retry">Retry</string>
	<string name="paused">Paused\nPress Menu to Continue</string>
	
	<string name="splash_activity_visit_website_button">Visit Website</string>
	<string name="splash_activity_expired_message">
		Thanks for trying out the beta!\n
		It has expired.\n
		Please visit our website for a new version!
	</string>
	<string name="website_uri">http://sevenwondersgame.com</string>
</resources>
