<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    
    <TextView android:text="@string/yourCollectedSpellCount"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    
    <TextView android:id="@+id/yourCollectedSpellCount"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    
    <TextView android:text="@string/yourRemainingTimeSeconds"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    
    <TextView android:id="@+id/yourRemainingTimeSeconds"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    		      
    <TextView android:text="@string/yourScore"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    
    <TextView android:id="@+id/yourScore"
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  />
    		  
   	<Button android:id="@+id/playAgain"
   			android:layout_width="fill_parent"
   			android:layout_height="wrap_content" 
   			android:text="@string/playAgain"/>
   			
   	<Button android:id="@+id/postToFacebook"
   			android:layout_width="fill_parent"
   			android:layout_height="wrap_content" 
   			android:text="@string/postToFacebook"
   			/>
    
</LinearLayout>